@@ -2,6 +2,8 @@ Revision history for Perl extension Wx.
 
 0.9919 TBR
     - Makefile checks for supported Wx version
+    - Fixed wxUSE_DATAVIEWCTRL constant ( rt#84566 )
+    
 
 0.9918 Wed Apr 03 2013
     - Added missing GetItemFont / SetItemFont for Wx::ListCtrl
